--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Contact Page";
 }
 I would love to contact you.  Please give me contact information for my professional staff to reach out to you. <br>
-<form action="/ContactSubmit">
+<form action="/Contact/contactsubmit" method="POST">
     <label for="Name">Full Name</label>
     <input type="text" name="Name">
     <br>
@@ -12,4 +12,5 @@ I would love to contact you.  Please give me contact information for my professi
     <label for="Phone">Phone Number:</label>
     <input type="text" name="Phone">
     <br>
+    <button name="Submit" value="Submit">Submit</button>
 </form>
